[ Mac wk2 ] http/tests/media/track-in-band-hls-metadata.html is flaky crashing. https://bugs.webkit.org/show_bug.cgi?id=209490 <rdar://problem/60837555>

Reviewed by Darin Adler.

Source/WebCore:

To ensure the TaskDispatcher doesn't get destroyed on a background thread at the same time it's
executing tasks on the main thread, when a GenericTaskQueue is destroyed on a background thread,
move the TaskDispatcher into a task, and use the dispatcher itself to destroy itself on the
main thread.

* platform/GenericTaskQueue.h:
(WebCore::GenericTaskQueue::GenericTaskQueue):
(WebCore::GenericTaskQueue::~GenericTaskQueue):
(WebCore::GenericTaskQueue::enqueueTask):

LayoutTests:

* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/222984@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259593 268f45cc-cd09-0410-ab3c-d52691b4dbfc